--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,29 +10,29 @@ Authors@R:
       person(given="Stefano", family="Monti", role=c("aut"), email="smonti@bu.edu")
      )
 Description: This tool 
-Depends: R (>= 4.0.0)
+Depends: R (>= 4.1.0)
 LazyData: no
 StagedInstall: no
 License: GPL-3 + file LICENSE
 URL: https://github.com/montilab/CaDrA-shiny/
 Packaged: 2017-07-10 18:44:45 UTC; 
 Encoding: UTF-8
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Imports: 
     CaDrA,
-    Biobase,
-    shiny,
-    DT,
-    markdown,
-    htmltools,
-    parallel,
-    tibble,
     dplyr,
+    DT,
+    GSVA,
+    GSEABase,
+    htmltools,
     magrittr,
-    purrr,
     methods,
-    utils,
-    tools
+    parallel,
+    shiny,
+    SummarizedExperiment,
+    tibble,
+    tools,
+    utils
 Suggests: 
     BiocStyle,
     devtools,
