--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@
 .project
 
 # History files
-.Rhistory
-.Rapp.history
+*.Rhistory
+*.Rapp.history
 
 # Session Data files
-.RData
+*.RData
 
 # User-specific files
-.Ruserdata
+*.Ruserdata
 
 # R Environment Variables
-.Renviron
-.Rproj.user
+*.Renviron
+*.Rproj.user
 *.Rproj
 
 
@@ -23,9 +23,6 @@
 
 # Output files from R CMD check
 /*.Rcheck/
-
-# RStudio files
-.Rproj.user/
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
@@ -38,9 +35,10 @@
 *.utf8.md
 *.knit.md
 
-## Ignores extradata 
-inst/extdata/datalist.csv
+## Ignores extradata directory
 inst/extdata/feature_set/**
 inst/extdata/gene_expression/**
 inst/extdata/input_score/**
-
+!inst/extdata/feature_set
+!inst/extdata/gene_expression
+!inst/extdata/input_score
