--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
 *.DS_Store
 .git
-.project
+/*.project
 
 # History files
-*.Rhistory
-*.Rapp.history
+/*.Rhistory
+/*.Rapp.history
 
 # Session Data files
-*.RData
+/*.RData
 
 # User-specific files
-*.Ruserdata
+/*.Ruserdata
 
 # R Environment Variables
-*.Renviron
-*.Rproj.user
-*.Rproj
+/*.Renviron
+/*.Rproj.user
+/*.Rproj
 
 
 # Output files from R CMD build
@@ -25,7 +25,7 @@
 /*.Rcheck/
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
+/*.httr-oauth
 
 # knitr and R markdown default cache directories
 *_cache/
@@ -34,3 +34,6 @@
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+
+
+
