add approprate files to extdata dir

--- a/inst/extdata/.gitignore
+++ b/inst/extdata/.gitignore
@@ -1,2 +1,10 @@
 
+# Exclude files in extdata directory
+/feature_set/*
+/gene_expression/*
+/input_score/*
+!datalist.csv
+!/feature_set
+!/gene_expression
+!/input_score
 
