--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,24 @@
+^\.git$
+^\.github$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^\.Rhistory$
+^docs$
+^README\.Rmd$
+^README_files$
+^NEWS\.Rmd$
+^NEWS_files$
+^\.travis\.yml$
+^_pkgdown\.yml$
+^shiny-server.sh$
+^.*\.o$
+^.*\.dll$
+^\.Rproj\.user$
+^\.DS_Store$
+^Dockerfile$
+^docker-compose.yml$
+^extdata$
+^eset$
+^input_score$
+^datalist.csv$
+^inst
