--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -40,11 +40,15 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "Docs"
+    - text: "Getting Started"
       menu:
-      - text: "Docker and Docker-Compose"
+      - text: "How to Run CaDrA Shiny"
+        href: articles/getting-started.html      
+      - text: "Containerizing CaDrA.shiny with Docker"
         href: articles/docker.html
-      - text: "CaDrA API"
+      - text: "Launch CaDrA Shiny with Compose"
+        href: articles/docker-compose.html        
+      - text: "Retrieve data with CaDrA Rest API"
         href: articles/api.html
       - text: "FAQs"
         href: articles/FAQs.html
@@ -54,4 +58,5 @@ navbar:
     - text: "Change Log"
       href: news/index.html
     - icon: fa-github
-      href: https://github.com/montilab/CaDrA.shiny
+      href: https://github.com/montilab/CaDrA.shiny/
+      
