update api functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,21 @@ export("%>%")
 export(CaDrA_App)
 export(CaDrA_Server)
 export(CaDrA_UI)
+export(download_feature_sets)
+export(get_feature_sets)
+export(get_gene_expressions)
+export(get_input_scores)
 import(CaDrA)
 import(DT)
 import(GSEABase)
 import(GSVA)
 import(SummarizedExperiment)
+import(dplyr)
 import(dplyr, except = c(union, intersect, setdiff))
 
 import(htmltools)
+import(httr)
+import(jsonlite)
 import(methods)
 import(parallel)
 import(shiny, except = c(dataTableOutput, renderDataTable))
