update cadra api

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,9 @@ export(CaDrA_App)
 export(CaDrA_Server)
 export(CaDrA_UI)
 export(download_feature_sets)
-export(get_feature_sets)
-export(get_gene_expressions)
-export(get_input_scores)
+export(get_feature_set)
+export(get_gene_expression)
+export(get_input_score)
 import(CaDrA)
 import(DT)
 import(GSEABase)
