--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     container_name: cadra
     image: montilab/cadra:2.0.0
     build: 
-      context: *cadra-git-code
+      context: *cadra-git-repo
     restart: always
     networks:
       - backend
