update readme and docs

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -16,12 +16,11 @@
 ^\.Rproj\.user$
 ^\.DS_Store$
 ^Dockerfile$
-^docker-compose.yml$
 ^extdata$
 ^eset$
 ^input_score$
 ^datalist.csv$
 ^inst$
-^\.yml$
 ^vignettes$
-^docker-compose-*\.yml
+^\.yml$
+^\.html$
