--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,13 +10,14 @@ export(pull_datasets)
 import(CaDrA)
 import(DT)
 import(SummarizedExperiment, except = c(show))
-
 import(dplyr)
 import(htmltools)
 import(httr)
 import(methods, except = c(removeClass, show))
 import(parallel)
 import(shiny, except = c(dataTableOutput, renderDataTable))
+import(shiny, except = c(dataTableOutput, renderDataTable))
+
 import(shinyjs, except = c(runExample))
  
 import(tibble)
